# reports_generations

./: .dockerignore  .gitignore  Dockerfile  README.MD  manage.py  pyproject.toml  reports.sql  setup.cfg
reports_generation/: asgi.py  settings.py  urls.py  wsgi.py
reports_generation/project_settings/: base.py  database.py  installed_apps.py  staticfiles.py
reports_generation/reports/: apps.py  filters.py  models.py  urls.py
reports_generation/reports/api/serializers/: reports.py
reports_generation/reports/api/views/: reports.py
reports_generation/reports/migrations/: 0001_initial.py  0002_installs1.py  0003_events.py  0004_remove_events_id_remove_installs1_id_and_more.py  0005_remove_user_birthday_alter_events_event_revenue_and_more.py
reports_generation/tests/: conftest.py
reports_generation/tests/factory/: users.py
reports_generation/tests/users/api/: conftest.py  test_login.py  test_registration.py
script_insert_to_db/: config_upload_csv_to_db.py  data_field.py  left_join.py  main_script.py
